# uc-intg-xbox

./: .gitignore  AZURE_SETUP_GUIDE.md  AZURE_SETUP_GUIDE_V2.md  Dockerfile  Dockerfile.txt  OAUTH_SOLUTION.md  OAUTH_SOLUTION_OOB.md  README.md  TESTING_v3.1.0.md  config.json  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt  test.py  test_auth.py  test_oauth_server.py  tokens.json  ucapi_import_list.py
.github/workflows/: build.yml  release.yml
uc_intg_xbox/: __init__.py  __main__.py  auth.py  client.py  config.py  const.py  device.py  driver.py  media_player.py  media_player_entity.py  oauth_server.py  presence_entity.py  remote_entity.py  sensor_entity.py  setup.py  setup_flow.py  xbox.py  xbox_client.py  xbox_device.py
